# custom-api-testing-showcase

./: .env  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: api-tests.yml
apps/mock_api/: Dockerfile  main.py  models.py  requirements.txt  router.py
performance/: smoke.js
security/: zap-baseline.conf
src/utils/: http.py
tests/contract/: test_contracts.py
tests/contract/schemas/: order.schema.json  user.schema.json
tests/data/: users.csv
tests/negative/: test_error_conditions.py
tests/regression/: test_orders_flow.py  test_users_crud.py
tests/smoke/: test_health.py
zap/: index.html
